--- a/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss
@@ -15,20 +15,23 @@
 .settings-panel {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 40%;
+    width: 30%;
     height: auto;
     max-width: none;
-    max-height: 60%;
+    max-height: 50%;
     border-radius: 20px;
     padding: 20px;
+    min-height: 30%;
 }
 
 .settingHeader {
     -unity-font-style: bold;
     -unity-text-align: middle-center;
     font-size: 55px;
+    flex-grow: 0;
+    max-height: 50%;
 }
 
 .close-button {
@@ -53,6 +56,9 @@
     margin-right: 30px;
     margin-bottom: 30px;
     margin-left: 30px;
+    flex-grow: 0;
+    max-height: none;
+    height: auto;
 }
 
 .green-button {
@@ -64,4 +70,9 @@
     background-color: rgb(106, 159, 65);
     font-size: 25px;
     -unity-text-align: middle-center;
+    flex-grow: 0;
+}
+
+.green-button:hover {
+    background-color: rgb(139, 185, 104);
 }
