--- a/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uxml
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/GearMind/UIToolkit/MainMenu.uss?fileID=7433441132597879392&amp;guid=9a79064ec2fd9214db5daaebfc17cc4c&amp;type=3#MainMenu" />
+    <Style src="project://database/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss?fileID=7433441132597879392&amp;guid=9a79064ec2fd9214db5daaebfc17cc4c&amp;type=3#MainMenu" />
     <ui:VisualElement name="Panel" style="flex-grow: 4; background-color: rgb(255, 255, 255); justify-content: center; align-content: center; display: flex;">
-        <ui:Label text="GEARMIND" name="Header" style="font-size: 70px; -unity-text-align: lower-center; flex-grow: 1; margin-right: 50%; margin-left: 50%; margin-top: 191px; margin-bottom: 20px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; justify-content: flex-start;" />
+        <ui:Label text="Gearmind" name="Header" style="font-size: 150px; -unity-text-align: lower-center; flex-grow: 1; margin-right: 50%; margin-left: 50%; margin-top: 30px; margin-bottom: 20px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; justify-content: flex-start; -unity-font-definition: url(&quot;project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&amp;guid=0da78171e9a8d374b8549aba0c2dd785&amp;type=3#BoldPixels&quot;); color: rgb(246, 168, 0); -unity-font-style: normal;" />
         <ui:VisualElement name="ButtonsContainer" class="buttons-container" style="flex-grow: 4; flex-wrap: nowrap;">
-            <ui:Button text="Играть" name="Play" class="menu-button" style="width: 25%; max-width: none;" />
+            <ui:Button text="Играть" name="Play" class="menu-button" style="width: 25%; max-width: none; font-size: 80px;" />
             <ui:Button text="Уровни" name="Levels" class="menu-button" />
             <ui:Button text="Настройки" name="Settings" class="menu-button" />
             <ui:Button text="Выход" name="Exit" class="menu-button" />
