--- a/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uxml
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uxml
@@ -2,7 +2,7 @@
     <Style src="project://database/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss?fileID=7433441132597879392&amp;guid=ccb6ed4a1f8815a4fa763d95faba1fe1&amp;type=3#LevelMenu" />
     <ui:VisualElement name="Panel" style="flex-grow: 1; background-color: rgb(255, 255, 255);">
         <ui:Button text="Назад" name="CloseButton" class="exit-button" />
-        <ui:Label text="Уровни" style="-unity-text-align: middle-center; font-size: 55px; -unity-font-style: bold;" />
+        <ui:Label text="Уровни" style="-unity-text-align: middle-center; font-size: 100px; -unity-font-style: normal; color: rgb(246, 168, 0); -unity-font-definition: url(&quot;project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&amp;guid=0da78171e9a8d374b8549aba0c2dd785&amp;type=3#BoldPixels&quot;); margin-top: 4px;" />
         <ui:VisualElement class="level-container">
             <ui:Button text="1" class="level-button" />
             <ui:Button text="2" class="level-button" />
