--- a/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss
@@ -2,8 +2,8 @@
 }
 
 .menu-button {
-    background-color: rgb(217, 217, 217);
-    font-size: 30px;
+    background-color: rgb(248, 236, 171);
+    font-size: 50px;
     -unity-text-align: middle-center;
     width: 20%;
     min-width: 300px;
@@ -19,6 +19,11 @@
     margin-right: 15px;
     margin-bottom: 15px;
     margin-left: 15px;
+    -unity-font-style: normal;
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
 }
 
 .buttons-container {
@@ -28,6 +33,10 @@
     width: 100%;
     flex-grow: 4;
     flex-wrap: nowrap;
+    -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
+    color: rgb(246, 168, 0);
+    font-size: 80px;
+    -unity-font-style: bold;
 }
 
 .menu-button:hover {
