--- a/Assets/GearMind/Scripts/UI/UIToolkit/Interface.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Interface.uss
@@ -18,7 +18,7 @@
     background-color: rgb(248, 236, 171);
     -unity-text-align: middle-center;
     color: rgb(246, 168, 0);
-    width: 31%;
+    width: 200px;
     height: 100px;
     justify-content: center;
     align-content: center;
@@ -26,7 +26,7 @@
     min-width: auto;
     min-height: auto;
     border-radius: 10px;
-    font-size: 35px;
+    font-size: 30px;
     padding: 20px;
     border-left-color: rgb(248, 236, 171);
     border-right-color: rgb(248, 236, 171);
@@ -37,17 +37,4 @@
     padding-right: 30px;
     padding-bottom: 30px;
     padding-left: 30px;
-}
-
-.interface-button:hover {
-    background-color: rgb(255, 255, 255);
-}
-
-.interface-button:active {
-    background-color: rgb(246, 168, 0);
-    color: rgb(255, 255, 255);
-    border-left-color: rgba(0, 0, 0, 0);
-    border-right-color: rgba(0, 0, 0, 0);
-    border-top-color: rgba(0, 0, 0, 0);
-    border-bottom-color: rgba(0, 0, 0, 0);
 }
