--- a/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss
@@ -1,3 +1,7 @@
+:root {
+    display: none;
+}
+
 #Panel {
     flex-direction: column;
     align-items: center;
@@ -7,6 +11,7 @@
     background-color: white;
     position: relative;
     padding-top: 100px;
+    display: flex;
 }
 
 .exit-button {
@@ -27,15 +32,6 @@
     border-bottom-color: rgb(255, 255, 255);
 }
 
-.level-container {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    margin-top: 3%;
-}
-
 .level-button {
     width: 157px;
     height: 157px;
@@ -54,4 +50,13 @@
     border-bottom-color: rgb(255, 255, 255);
     -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
     color: rgb(246, 168, 0);
+}
+
+.level-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin-top: 3%;
 }
