--- a/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss
@@ -5,7 +5,7 @@
     background-color: rgb(248, 236, 171);
     font-size: 50px;
     -unity-text-align: middle-center;
-    width: 20%;
+    width: 300px;
     min-width: 300px;
     max-width: none;
     min-height: 50px;
@@ -37,13 +37,4 @@
     color: rgb(246, 168, 0);
     font-size: 80px;
     -unity-font-style: bold;
-}
-
-.menu-button:hover {
-    background-color: rgb(234, 234, 234);
-}
-
-.menu-button:active {
-    background-color: rgb(99, 99, 99);
-    color: rgb(255, 255, 255);
 }
