--- a/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss
@@ -1,4 +1,5 @@
 :root {
+    display: none;
 }
 
 .settings {
@@ -17,13 +18,13 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 30%;
-    height: auto;
+    width: 440px;
+    height: 330px;
     max-width: none;
-    max-height: 40%;
+    max-height: 330px;
     border-radius: 20px;
     padding: 20px;
-    min-height: 30%;
+    min-height: 330px;
     border-left-color: rgb(255, 255, 255);
     border-right-color: rgb(255, 255, 255);
     border-top-color: rgb(255, 255, 255);
@@ -32,7 +33,7 @@
 }
 
 .settingHeader {
-    -unity-font-style: bold;
+    -unity-font-style: normal;
     -unity-text-align: middle-center;
     font-size: 55px;
     flex-grow: 0;
@@ -62,15 +63,15 @@
 }
 
 .option {
-    width: 70%;
+    width: 300px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    margin-left: 30px;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
     flex-grow: 0;
     max-height: none;
     height: auto;
@@ -87,10 +88,10 @@
     -unity-text-align: middle-center;
     flex-grow: 0;
     -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
-    border-left-color: rgb(255, 255, 255);
-    border-right-color: rgb(255, 255, 255);
-    border-top-color: rgb(255, 255, 255);
-    border-bottom-color: rgb(255, 255, 255);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
 }
 
 .green-button:hover {
