--- a/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uxml
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uxml
@@ -1,18 +1,18 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss?fileID=7433441132597879392&amp;guid=b879d50d99a0d3c4ca70e4274d6085e6&amp;type=3#Settings" />
-    <ui:VisualElement name="Panel" class="settings" style="flex-grow: 1; position: absolute;">
+    <ui:VisualElement name="Panel" class="settings" style="flex-grow: 1; position: absolute; display: flex;">
         <ui:VisualElement name="VisualElement" class="settings-panel" style="flex-grow: 1; background-color: rgb(248, 236, 171); min-width: 400px; border-left-color: rgb(248, 236, 171); border-right-color: rgb(248, 236, 171); border-top-color: rgb(248, 236, 171); border-bottom-color: rgb(248, 236, 171);">
             <ui:Button text="X" name="CloseButton" class="close-button" style="background-color: rgb(246, 168, 0); border-left-color: rgb(246, 168, 0); border-right-color: rgb(246, 168, 0); border-top-color: rgb(246, 168, 0); border-bottom-color: rgb(246, 168, 0);" />
-            <ui:Label text="Настройки" name="Header" class="settingHeader" style="flex-grow: 0; width: auto; font-size: 55px; margin-top: 10%; margin-right: 0%; margin-bottom: 0%; margin-left: 0%; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;" />
-            <ui:VisualElement class="option" style="flex-grow: 0; height: auto; margin-bottom: 10px; margin-top: 50px;">
+            <ui:Label text="Настройки" name="Header" class="settingHeader" style="flex-grow: 0; width: auto; font-size: 55px; margin-top: 20px; margin-right: 0%; margin-bottom: 0%; margin-left: 0%; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;" />
+            <ui:VisualElement class="option" style="flex-grow: 0; height: auto; margin-bottom: 10px; margin-top: 10px;">
                 <ui:Label text="Музыка" class="option-label" style="margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; font-size: 35px;" />
                 <ui:Toggle name="MusicToggle" class="option-toggle" />
             </ui:VisualElement>
-            <ui:VisualElement class="option" style="flex-grow: 0; margin-bottom: 50px; margin-top: 0; height: auto;">
+            <ui:VisualElement class="option" style="flex-grow: 0; margin-bottom: 10px; margin-top: 0; height: auto;">
                 <ui:Label text="Звук" class="option-label" style="font-size: 35px;" />
                 <ui:Toggle name="SoundToggle" class="option-toggle" />
             </ui:VisualElement>
-            <ui:Button text="Выйти в главное меню" name="ExitToMainMenuButton" class="green-button" style="color: rgb(255, 255, 255); display:none" />
+            <ui:Button text="Выйти в главное меню" name="ExitToMainMenuButton" class="green-button" style="color: rgb(255, 255, 255); display: none;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
