--- a/Assets/GearMind/Scripts/UI/UIToolkit/Interface.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Interface.uss
@@ -15,11 +15,11 @@
 }
 
 .interface-button {
-    background-color: rgb(248, 236, 171);
+    background-color: rgb(255, 255, 255);
     -unity-text-align: middle-center;
     color: rgb(246, 168, 0);
-    width: 200px;
-    height: 100px;
+    width: 63px;
+    height: 63px;
     justify-content: center;
     align-content: center;
     text-overflow: clip;
@@ -28,13 +28,36 @@
     border-radius: 10px;
     font-size: 30px;
     padding: 20px;
-    border-left-color: rgb(248, 236, 171);
-    border-right-color: rgb(248, 236, 171);
-    border-top-color: rgb(248, 236, 171);
-    border-bottom-color: rgb(248, 236, 171);
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
     -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
-    padding-top: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
-    padding-left: 30px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
+
+.button-icon--active {
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+}
+
+.button-icon--inactive {
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: none;
+}
+
