--- a/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss
@@ -1,5 +1,5 @@
 :root {
-    display: none;
+    display: flex;
 }
 
 #Panel {
@@ -18,18 +18,19 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    width: 10%;
-    height: 10%;
+    width: 97px;
+    height: 63px;
     font-size: 40px;
     border-radius: 10px;
     -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
     color: rgb(246, 168, 0);
-    background-color: rgb(248, 236, 171);
+    background-color: rgb(255, 255, 255);
     -unity-background-image-tint-color: rgb(255, 255, 255);
     border-left-color: rgb(255, 255, 255);
     border-right-color: rgb(255, 255, 255);
     border-top-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
+    background-image: url("project://database/Assets/GearMind/UI/Back.png?fileID=2800000&guid=c81a0f6fc951a1d40b710f0c100178cc&type=3#Back");
 }
 
 .level-button {
