--- a/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uss
@@ -19,17 +19,18 @@
     justify-content: space-around;
     align-items: center;
     width: 440px;
-    height: 330px;
+    height: 370px;
     max-width: none;
-    max-height: 330px;
+    max-height: 370px;
     border-radius: 20px;
     padding: 20px;
-    min-height: 330px;
+    min-height: 370px;
     border-left-color: rgb(255, 255, 255);
     border-right-color: rgb(255, 255, 255);
     border-top-color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
-    background-color: rgb(248, 236, 171);
+    background-color: rgba(255, 255, 255, 0);
+    background-image: url("project://database/Assets/GearMind/UI/SettingsPanel.png?fileID=21300000&guid=8a3950f5c78e65943bd6fb7b70bf9b14&type=3#SettingsPanel");
 }
 
 .settingHeader {
@@ -50,7 +51,7 @@
     height: 50px;
     border-radius: 20px;
     font-size: 30px;
-    background-color: rgb(246, 168, 0);
+    background-color: rgba(255, 255, 255, 0);
     color: rgb(255, 255, 255);
     border-left-color: rgb(255, 255, 255);
     border-right-color: rgb(255, 255, 255);
@@ -60,6 +61,7 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
+    background-image: url("project://database/Assets/GearMind/UI/CloseBtn.png?fileID=2800000&guid=09d27b4eb6e07e34c92503ed2add5b02&type=3#CloseBtn");
 }
 
 .option {
@@ -83,6 +85,37 @@
     padding-right: 23px;
     padding-bottom: 15px;
     padding-left: 23px;
+    background-color: rgba(246, 168, 0, 0);
+    font-size: 30px;
+    -unity-text-align: middle-center;
+    flex-grow: 0;
+    -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
+    border-left-color: rgba(255, 255, 255, 0);
+    border-right-color: rgba(255, 255, 255, 0);
+    border-top-color: rgba(255, 255, 255, 0);
+    border-bottom-color: rgba(255, 255, 255, 0);
+    background-image: url("project://database/Assets/GearMind/UI/ButtonWhite.png?fileID=21300000&guid=4a4169b7818ecf545bb4dfa5e8596390&type=3#ButtonWhite");
+    -unity-background-image-tint-color: rgb(106, 159, 65);
+    color: rgb(248, 236, 171);
+}
+
+.green-button:hover {
+    background-color: rgb(243, 211, 123);
+    -unity-background-image-tint-color: rgb(246, 168, 0);
+}
+
+.option-label {
+    font-size: 40px;
+    -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
+    color: rgb(246, 168, 0);
+}
+
+.orange-button {
+    border-radius: 15px;
+    padding-top: 15px;
+    padding-right: 23px;
+    padding-bottom: 15px;
+    padding-left: 23px;
     background-color: rgb(246, 168, 0);
     font-size: 30px;
     -unity-text-align: middle-center;
@@ -92,14 +125,18 @@
     border-right-color: rgba(255, 255, 255, 0);
     border-top-color: rgba(255, 255, 255, 0);
     border-bottom-color: rgba(255, 255, 255, 0);
+    background-image: url("project://database/Assets/GearMind/UI/ButtonWhite.png?fileID=21300000&guid=4a4169b7818ecf545bb4dfa5e8596390&type=3#ButtonWhite");
+    -unity-background-image-tint-color: rgb(246, 168, 0);
 }
 
-.green-button:hover {
-    background-color: rgb(243, 211, 123);
+.main-button {
 }
 
-.option-label {
-    font-size: 40px;
-    -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
-    color: rgb(246, 168, 0);
+.orange-button:hover {
+    background-color: rgba(243, 211, 123, 0);
+    -unity-background-image-tint-color: rgb(243, 211, 123);
+}
+
+.orange-button:active {
+    -unity-background-image-tint-color: rgb(246, 168, 0);
 }
