--- a/Assets/GearMind/Scripts/UI/UIToolkit/Buttons.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Buttons.uss
@@ -1,24 +1,18 @@
+.button-mask:hover {
+    -unity-background-image-tint-color: rgb(255, 249, 217);
+}
+
 .main-button:hover {
-    border-left-color: rgb(255, 255, 255);
-    border-right-color: rgb(255, 255, 255);
-    border-top-color: rgb(255, 255, 255);
-    border-bottom-color: rgb(255, 255, 255);
-    border-top-width: 0;
-    border-right-width: 0;
-    border-bottom-width: 0;
-    border-left-width: 0;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
     -unity-background-image-tint-color: rgb(243, 211, 123);
     color: rgb(255, 255, 255);
 }
 
 .main-button:active {
-    background-color: rgba(246, 168, 0, 0);
-    border-left-color: rgb(246, 168, 0);
-    border-right-color: rgb(246, 168, 0);
-    border-top-color: rgb(246, 168, 0);
-    border-bottom-color: rgb(246, 168, 0);
-    color: rgb(255, 255, 255);
-    background-image: none;
+    background-color: rgba(255, 255, 255, 0);
     -unity-background-image-tint-color: rgb(246, 168, 0);
+    color: rgb(255, 255, 255);
+}
+
+.button-mask {
 }
