--- a/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uxml
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Settings.uxml
@@ -5,12 +5,20 @@
             <ui:Button text="&#10;" name="CloseButton" class="close-button" style="background-color: rgba(246, 168, 0, 0); border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0);" />
             <ui:Label text="Настройки" name="Header" class="settingHeader" style="flex-grow: 0; width: auto; font-size: 55px; margin-top: 0; margin-right: 0%; margin-bottom: 0%; margin-left: 0%; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0;" />
             <ui:VisualElement class="option" style="flex-grow: 0; height: auto; margin-bottom: 0; margin-top: 10px;">
-                <ui:Label text="Музыка" class="option-label" style="margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; font-size: 35px;" />
-                <ui:Toggle name="MusicToggle" class="option-toggle" />
+                <ui:Label text="Музыка" class="option-label" style="margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; font-size: 40px;" />
+                <ui:Button name="MusicToggleSwitch" class="toggle-switch" style="background-color: rgba(255, 255, 255, 0); border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0);">
+                    <ui:VisualElement class="toggle-track" />
+                    <ui:VisualElement class="toggle-thumb" />
+                    <ui:Label name="ToggleText" class="toggle-text" text="Off" />
+                </ui:Button>
             </ui:VisualElement>
             <ui:VisualElement class="option" style="flex-grow: 0; margin-bottom: 30px; margin-top: 0; height: auto;">
-                <ui:Label text="Звук" class="option-label" style="font-size: 35px;" />
-                <ui:Toggle name="SoundToggle" class="option-toggle" />
+                <ui:Label text="Звук" class="option-label" style="font-size: 40px;" />
+                <ui:Button name="SoundToggleSwitch" class="toggle-switch" style="border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0); background-color: rgba(255, 255, 255, 0);">
+                    <ui:VisualElement class="toggle-track" />
+                    <ui:VisualElement class="toggle-thumb" />
+                    <ui:Label name="ToggleText" class="toggle-text" text="Off" />
+                </ui:Button>
             </ui:VisualElement>
             <ui:Button text="Выйти в главное меню" name="ExitToMainMenuButton" class="orange-button" style="color: rgb(255, 255, 255); visibility: hidden;" />
         </ui:VisualElement>
