--- a/Assets/GearMind/Scripts/UI/UIToolkit/Buttons.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Buttons.uss
@@ -6,6 +6,7 @@
     background-color: rgba(255, 255, 255, 0);
     -unity-background-image-tint-color: rgb(243, 211, 123);
     color: rgb(255, 255, 255);
+    translate: 0 -10px;
 }
 
 .main-button:active {
@@ -13,6 +14,9 @@
     -unity-background-image-tint-color: rgb(246, 168, 0);
     color: rgb(255, 255, 255);
 }
-
+.main-button{
+    transition-duration: 200ms;
+    transition-property: translate;
+}
 .button-mask {
 }
