--- a/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/LevelMenu.uss
@@ -41,16 +41,19 @@
     align-items: center;
     background-color: rgb(248, 236, 171);
     border-radius: 10px;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border-left-color: rgb(255, 255, 255);
-    border-right-color: rgb(255, 255, 255);
-    border-top-color: rgb(255, 255, 255);
-    border-bottom-color: rgb(255, 255, 255);
+    margin: 10px;
     -unity-font-definition: url("project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&guid=0da78171e9a8d374b8549aba0c2dd785&type=3#BoldPixels");
     color: rgb(246, 168, 0);
+}
+
+.level-button-shadow {
+    width: 157px;
+    height: 157px;
+    background-color: rgba(248, 236, 171, 0);
+    border-radius: 10px;
+    margin: 10px;
+    -unity-background-image-tint-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
 }
 
 .level-container {
