--- a/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uss
@@ -8,8 +8,8 @@
     width: 300px;
     min-width: 300px;
     max-width: none;
-    min-height: 50px;
-    max-height: 100px;
+    min-height: 100px;
+    max-height: none;
     border-radius: 20px;
     padding-top: 20px;
     padding-right: 130px;
@@ -28,6 +28,7 @@
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
+    height: 100px;
 }
 
 .buttons-container {
@@ -41,4 +42,17 @@
     color: rgb(246, 168, 0);
     font-size: 80px;
     -unity-font-style: bold;
+}
+
+.menu-button-shadow {
+    width: 300px;
+    min-width: 300px;
+    background-color: rgba(248, 236, 171, 0);
+    border-radius: 10px;
+    margin: 15px;
+    -unity-background-image-tint-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    height: 100px;
+    min-height: 100px;
+    border-radius: 15px;
 }
