--- a/Assets/GearMind/Scripts/UI/UIToolkit/Buttons.uss
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Buttons.uss
@@ -20,3 +20,18 @@
 }
 .button-mask {
 }
+
+.button-wrap {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-wrap:hover .main-button {
+    background-color: rgba(255, 255, 255, 0);
+    -unity-background-image-tint-color: rgb(243, 211, 123);
+    color: rgb(255, 255, 255);
+    translate: 0 -10px;
+}
