--- a/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uxml
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/MainMenu.uxml
@@ -4,19 +4,19 @@
     <ui:VisualElement name="Panel" style="flex-grow: 4; background-color: rgb(255, 255, 255); justify-content: center; align-content: center; display: flex;">
         <ui:Label text="Gearmind" name="Header" style="font-size: 150px; -unity-text-align: lower-center; flex-grow: 1; margin-right: 50%; margin-left: 50%; margin-top: 30px; margin-bottom: 20px; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; justify-content: flex-start; -unity-font-definition: url(&quot;project://database/Assets/TextMesh%20Pro/Fonts/BoldPixels.ttf?fileID=12800000&amp;guid=0da78171e9a8d374b8549aba0c2dd785&amp;type=3#BoldPixels&quot;); color: rgb(246, 168, 0); -unity-font-style: normal;" />
         <ui:VisualElement name="ButtonsContainer" class="buttons-container" style="flex-grow: 4; flex-wrap: nowrap;">
-            <ui:VisualElement>
+            <ui:VisualElement class="button-wrap">
                 <ui:Button class="menu-button-shadow" style="width: 470px; max-width: none; font-size: 80px; min-width: 470px; background-image: url(&quot;project://database/Assets/GearMind/UI/PlayBtn.png?fileID=21300000&amp;guid=1d2871170a2f82943b261748e70dafba&amp;type=3#PlayBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
                 <ui:Button text="Играть" name="Play" class="menu-button main-button" style="width: 470px; max-width: none; font-size: 80px; min-width: 470px; background-image: url(&quot;project://database/Assets/GearMind/UI/PlayBtn.png?fileID=21300000&amp;guid=1d2871170a2f82943b261748e70dafba&amp;type=3#PlayBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
             </ui:VisualElement>
-            <ui:VisualElement>
+            <ui:VisualElement class="button-wrap">
                 <ui:Button class="menu-button-shadow" style="background-image: url(&quot;project://database/Assets/GearMind/UI/LevelsBtn.png?fileID=21300000&amp;guid=f2672e446f5df674b8950c7015865207&amp;type=3#LevelsBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
                 <ui:Button text="Уровни" name="Levels" class="menu-button main-button" style="background-image: url(&quot;project://database/Assets/GearMind/UI/LevelsBtn.png?fileID=21300000&amp;guid=f2672e446f5df674b8950c7015865207&amp;type=3#LevelsBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
             </ui:VisualElement>
-            <ui:VisualElement>
+            <ui:VisualElement class="button-wrap">
                 <ui:Button class="menu-button-shadow" style="background-image: url(&quot;project://database/Assets/GearMind/UI/SettingsBtn.png?fileID=21300000&amp;guid=294a52c5aa5ac784cb4f9ee305978944&amp;type=3#SettingsBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
                 <ui:Button text="Настройки" name="Settings" class="menu-button main-button" style="background-image: url(&quot;project://database/Assets/GearMind/UI/SettingsBtn.png?fileID=21300000&amp;guid=294a52c5aa5ac784cb4f9ee305978944&amp;type=3#SettingsBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
             </ui:VisualElement>
-            <ui:VisualElement>
+            <ui:VisualElement class="button-wrap">
                 <ui:Button class="menu-button-shadow" style="background-image: url(&quot;project://database/Assets/GearMind/UI/ExitBtn.png?fileID=21300000&amp;guid=2a6744f0824484d4c89f8e35cdd208a9&amp;type=3#ExitBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
                 <ui:Button text="Выход" name="Exit" class="menu-button main-button" style="background-image: url(&quot;project://database/Assets/GearMind/UI/ExitBtn.png?fileID=21300000&amp;guid=2a6744f0824484d4c89f8e35cdd208a9&amp;type=3#ExitBtn&quot;); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0;" />
             </ui:VisualElement>
