--- a/Assets/GearMind/Scripts/UI/UIToolkit/Interface.uxml
+++ b/Assets/GearMind/Scripts/UI/UIToolkit/Interface.uxml
@@ -9,4 +9,8 @@
         <ui:Button text="&#10;" name="Reload" class="interface-button button-mask" style="background-image: url(&quot;project://database/Assets/GearMind/UI/ResetLevelBtn.png?fileID=2800000&amp;guid=758d4e3a922f8854584b4809d98fc9fe&amp;type=3#ResetLevelBtn&quot;);" />
         <ui:Button text="&#10;" name="Settings" class="interface-button button-mask" style="background-image: url(&quot;project://database/Assets/GearMind/UI/MenuBtn.png?fileID=2800000&amp;guid=572586fa5c81b5240babe5dfffe278c2&amp;type=3#MenuBtn&quot;);" />
     </ui:VisualElement>
+    <ui:VisualElement name="RotationControls" class="rotation-controls">
+        <ui:Button text="Left" name="RotateLeft" class="rotation-button left" style="display: none;" />
+        <ui:Button text="Right" name="RotateRight" class="rotation-button right" style="display: none;" />
+    </ui:VisualElement>
 </ui:UXML>
